--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --environment $NODE_ENV",
+    "postinstall": "ng build --aot --environment $BUILD_ENV",
     "start": "node server.js"
   },
   "engines": {
