--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bulma": "^0.4.1",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
+    "font-awesome": "^4.7.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
